MiSmola #1-Data-structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(obj_courier)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(obj_courier main.cpp)
+add_executable(obj_courier main.cpp model/datastructures/Edge.cpp model/datastructures/Edge.h model/datastructures/Graph.cpp model/datastructures/Graph.h model/datastructures/Routes.cpp model/datastructures/Routes.h model/datastructures/Trip.cpp model/datastructures/Trip.h)
